default-layout.scss fixes: iOS + fixed + z-index

--- a/src/core/component/constant.scss
+++ b/src/core/component/constant.scss
@@ -59,6 +59,7 @@ $rac-color-1-0: #212121 !default;
 $rac-color-1-1: #d8ddde !default;
 /**/
 $rac-layout-offset-0: 24px !default;
+$rac-layout-offset-1: 40px !default;
 /**/
 $rac-default-width-1: 56px !default;
 $rac-default-height-1: 56px !default;
@@ -659,54 +660,53 @@ $rac-snackbar-error-button-color: $rac-snackbar-button-color !default;
 $rac-snackbar-error-background-color: $color-11 !default;
 
 /* @stable [13.09.2018] */
-$rac-default-layout-header-height: 56px !default;
-$rac-default-layout-header-user-margin-right: 16px !default;
-$rac-default-layout-header-user-font-weight: $rac-default-font-weight-2 !default;
-$rac-default-layout-header-user-font-size: 14px !default;
-$rac-default-layout-header-user-color: $rac-default-text-color !default;
-$rac-default-layout-header-user-photo-width: 24px !default;
-$rac-default-layout-header-user-photo-height: $rac-default-layout-header-user-photo-width !default;
-$rac-default-layout-header-user-photo-border-radius: $rac-default-layout-header-user-photo-width / 2 !default;
-$rac-default-layout-header-user-photo-margin-right: 8px !default;
-$rac-default-layout-header-color: $color-5 !default;
-$rac-default-layout-header-padding: 0 $rac-default-layout-offset !default;
+$rac-default-layout-drawer-mini-width: 48px !default;
+$rac-default-layout-drawer-navigation-list-group-subheader-height: 40px !default;
+$rac-default-layout-drawer-navigation-list-icon-width: 48px !default;
+$rac-default-layout-drawer-navigation-list-item-height: 32px !default;
+$rac-default-layout-drawer-toolbar-spacer-background: $color-7 !default;
+$rac-default-layout-drawer-toolbar-spacer-color: $color-5 !default;
+$rac-default-layout-drawer-toolbar-spacer-cursor: pointer !default;
+$rac-default-layout-drawer-toolbar-spacer-height: $rac-default-logo-toolbar-size !default;
+$rac-default-layout-drawer-transform: translate3d(0, 0, 0) !default; /* iOS fixed + z-index workaround */
+$rac-default-layout-drawer-width: 220px !default;
+$rac-default-layout-drawer-z-index: $rac-z-index-drawer !default;
+$rac-default-layout-footer-height: $rac-default-toolbar-height !default;
+$rac-default-layout-form-actions-border-top: unset !default;
+$rac-default-layout-form-actions-height: 60px !default;
+$rac-default-layout-form-actions-margin: $rac-default-offset 0 0 0 !default;
+$rac-default-layout-form-actions-padding: $rac-default-offset 0 0 0 !default;
 $rac-default-layout-header-background: unset !default;
-$rac-default-layout-sub-header-height: 84px !default;
-$rac-default-layout-sub-header-bordered-border-bottom: unset !default;
-$rac-default-layout-sub-header-bordered-margin: unset !default;
-$rac-default-layout-sub-header-button-navigation-margin: 0 16px 0 0 !default;
-$rac-default-layout-main-margin: 0 $rac-default-layout-offset $rac-default-layout-offset $rac-default-layout-offset !default;
+$rac-default-layout-header-color: $color-5 !default;
+$rac-default-layout-header-height: 56px !default;
+$rac-default-layout-header-padding: 0 $rac-default-layout-offset !default;
+$rac-default-layout-header-user-color: $rac-default-text-color !default;
+$rac-default-layout-header-user-font-size: 14px !default;
+$rac-default-layout-header-user-font-weight: $rac-default-font-weight-2 !default;
+$rac-default-layout-header-user-margin-right: 16px !default;
+$rac-default-layout-header-user-photo-width: 24px !default;
+$rac-default-layout-header-user-photo-border-radius: $rac-default-layout-header-user-photo-width / 2 !default;
+$rac-default-layout-header-user-photo-height: $rac-default-layout-header-user-photo-width !default;
+$rac-default-layout-header-user-photo-margin-right: 8px !default;
+$rac-default-layout-logo-menu-icon-color: $color-5 !default;
+$rac-default-layout-logo-menu-icon-margin-right: $rac-default-offset !default;
+$rac-default-layout-main-body-container-margin-bottom: 16px !default;
+$rac-default-layout-main-body-container-padding-bottom: 16px !default;
+$rac-default-layout-main-body-content-padding: 0 $rac-default-layout-offset 0 0 !default;
+$rac-default-layout-main-body-height: 100% !default;
+$rac-default-layout-main-body-padding: 0 $rac-default-layout-offset !default;
+$rac-default-layout-main-body-tab-panel-wrapper-border-bottom: unset !default;
+$rac-default-layout-main-body-wrapper-height: 100% !default;
 $rac-default-layout-main-body-wrapper-overflow: auto !default;
 $rac-default-layout-main-body-wrapper-position: absolute !default;
 $rac-default-layout-main-body-wrapper-width: 100% !default;
-$rac-default-layout-main-body-wrapper-height: 100% !default;
-$rac-default-layout-main-body-height: 100% !default;
-$rac-default-layout-main-body-padding: 0 $rac-default-layout-offset !default;
-$rac-default-layout-main-body-content-padding: 0 $rac-default-layout-offset 0 0 !default;
-/**/
-$rac-default-layout-form-actions-margin: $rac-default-offset 0 0 0 !default;
-$rac-default-layout-form-actions-border-top: unset !default;
-$rac-default-layout-form-actions-padding: $rac-default-offset 0 0 0 !default;
-$rac-default-layout-form-actions-height: 60px !default;
-/**/
-$rac-default-layout-main-body-tab-panel-wrapper-border-bottom: unset !default;
-$rac-default-layout-footer-height: $rac-default-toolbar-height !default;
-$rac-default-layout-main-body-container-margin-bottom: 16px !default;
-$rac-default-layout-main-body-container-padding-bottom: 16px !default;
-$rac-default-layout-drawer-toolbar-spacer-cursor: pointer !default;
-$rac-default-layout-drawer-toolbar-spacer-height: $rac-default-logo-toolbar-size !default;
-$rac-default-layout-drawer-toolbar-spacer-color: $color-5 !default;
-$rac-default-layout-drawer-toolbar-spacer-background: $color-7 !default;
-$rac-default-layout-drawer-width: 220px !default;
-$rac-default-layout-drawer-z-index: $rac-z-index-drawer !default;
-$rac-default-layout-drawer-mini-width: 48px !default;
-$rac-default-layout-drawer-navigation-list-group-subheader-height: 40px !default;
-$rac-default-layout-drawer-navigation-list-item-height: 32px !default;
-$rac-default-layout-drawer-navigation-list-icon-width: 48px !default;
-$rac-default-layout-notifications-width: 400px !default;
+$rac-default-layout-main-margin: 0 $rac-layout-offset-1 $rac-layout-offset-1 $rac-layout-offset-1 !default;
 $rac-default-layout-notifications-background: $color-3 !default;
-$rac-default-layout-logo-menu-icon-margin-right: $rac-default-offset !default;
-$rac-default-layout-logo-menu-icon-color: $color-5 !default;
+$rac-default-layout-notifications-width: 400px !default;
+$rac-default-layout-sub-header-bordered-border-bottom: unset !default;
+$rac-default-layout-sub-header-bordered-margin: unset !default;
+$rac-default-layout-sub-header-button-navigation-margin: 0 16px 0 0 !default;
+$rac-default-layout-sub-header-height: 84px !default;
 
 /* @stable [25.09.2018] */
 $rac-chart-canvas-wrapper-width: 100% !default;
